--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,6 +13,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    defaults:
+      run:
+         working-directory: ./frontend/excel-interface
 
     strategy:
       matrix:
@@ -26,7 +29,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        working-directory: ./app
+     
     - run: npm ci
     - run: npm run lint
     - run: npm run prettier
