--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-     
+    - run: ls     
     - run: npm ci
     - run: npm run lint
     - run: npm run prettier
