--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,7 +18,7 @@ jobs:
          working-directory: ./frontend/excel-interface
 
     strategy:
-      matrix:
+      matrix:        
         node-version: [14.x, 16.x, 18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
@@ -29,6 +29,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: ./frontend/excel-interface/package-lock.json
     - run: ls     
     - run: npm ci
     - run: npm run lint
