--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,7 +14,7 @@ jobs:
 
     runs-on: ubuntu-latest
     env:
-      working-directory: ./frontend/excel-interface
+      working-directory: /frontend/excel-interface
 
 
     strategy:
