--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: ./frontend/excel-interface/package-lock.json
+        cache-dependency-path: /frontend/excel-interface/package-lock.json
     - run: npm ci
     - run: npm run lint
     - run: npm run prettier
