--- a/frontend/excel-interface/package.json
+++ b/frontend/excel-interface/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "babel-jest": "^29.7.0",
