adding more tests

--- a/frontend/excel-interface/package.json
+++ b/frontend/excel-interface/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
+    "upsnap": "jest --updateSnapshot",
     "prettier": "prettier . --write"
   },
   "dependencies": {
