--- a/frontend/excel-interface/package.json
+++ b/frontend/excel-interface/package.json
@@ -23,6 +23,7 @@
     "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
     "babel-jest": "^29.7.0",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
