--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -43,4 +43,4 @@ jobs:
     - name: Test with pytest
       run: |
         #unit tests
-        pytest tests/mapping_manager_tests.py
+        pytest ./backend/tests/mapping_manager_tests.py
