--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -42,6 +42,9 @@ jobs:
         echo "CONNECT_URL=mongodb+srv://Cluster33690:eE1RRF1ZSEFW@cluster33690.au8shvj.mongodb.net" >> $GITHUB_ENV
         echo "MAP_DB=mapping_DB" >> $GITHUB_ENV
         python environment_variables.py
+    - name: Static check with pylint
+      run: |
+        pylint app/* --ignore-imports=y
     - name: Test with pytest
       run: |
         #unit tests
