--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -44,7 +44,7 @@ jobs:
         python environment_variables.py
     - name: Static check with pylint
       run: |
-        pylint app/* --ignore-imports=y
+        pylint app/* --ignore-imports=y --fail-under=8
     - name: Test with pytest
       run: |
         #unit tests
