--- a/frontend/excel-interface/package.json
+++ b/frontend/excel-interface/package.json
@@ -9,7 +9,8 @@
         "lint": "next lint",
         "test": "jest",
         "upsnap": "jest --updateSnapshot",
-        "prettier": "prettier . --write"
+        "prettier": "prettier . --write",
+        "doc": "jsdoc src/app"
     },
     "dependencies": {
         "next": "13.5.6",
@@ -31,6 +32,7 @@
         "identity-obj-proxy": "^3.0.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "jsdoc": "^4.0.2",
         "prettier": "3.0.3",
         "react-test-renderer": "^18.2.0"
     }
