--- a/frontend/excel-interface/package.json
+++ b/frontend/excel-interface/package.json
@@ -13,6 +13,7 @@
         "doc": "jsdoc src/app"
     },
     "dependencies": {
+        "dotenv": "^16.3.1",
         "next": "13.5.6",
         "react": "^18",
         "react-dom": "^18",
